Fixed header bug where background would flicker

--- a/src/styles/Night/Nav.module.css
+++ b/src/styles/Night/Nav.module.css
@@ -9,7 +9,7 @@
     height: 50px;
     width: 35px;
     transition: transform 0.4s ease;
-    z-index: 100;
+    z-index: 51;
 }
 
 @media only screen and (min-width: 1000px) {
