--- a/src/styles/night/Header.module.css
+++ b/src/styles/night/Header.module.css
@@ -1,158 +1,85 @@
-/* Float Popup
+/* Transition Line Draw-In
 ––––––––––––––––––––––––––––––––––––––––––––––––––*/
-.hiddenFloat {
-    width: 100%;
-    height: 100%;
+.animations {
     visibility: hidden;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+    background-image: linear-gradient(to bottom, var(--night-bg-color) 50%, var(--day-bg-color) 50%);
+    background-position: bottom;
+    background-size: 100% 200%;
+
+    z-index: 52; /* Nav Menu at z-index 51 */
+    overflow: hidden;
 }
 
-.visibleFloat {
-    position: fixed;
-    top: 0%;
-    left: 0%;
-    
-    width: 100%;
-    height: 100%;
-    z-index: 100;
+@media (prefers-color-scheme: dark) {
+    .animations {
+        background-image: linear-gradient(to bottom, var(--night-bg-color) 50%, var(--dark-scheme-color) 50%);
+    }
+}
+
+.animateContainer {
     visibility: visible;
-    animation: make-invisible 0.1s linear 1.6s forwards;
+    animation: 
+        draw-down-bg 0.22s forwards 0.58s,
+        pull-up-bg 0.11s forwards 0.97s,
+        draw-down-bg 0.11s forwards 1.27s,
+        remove-bg 0s forwards 1.5s; /* Remove container to reveal header */
 }
 
 @media (prefers-reduced-motion) {
-    .visibleFloat {
-        animation: make-invisible 0.1s linear 0.8s forwards;
+    .animateContainer {
+        animation: 
+            draw-down-bg 0.22s forwards 0.58s,
+            remove-bg 0s forwards 0.95s;
     }
 }
 
-@keyframes make-invisible {
-    from {
-        opacity: 100%;
-        visibility: visible;
-    }
-
+@keyframes draw-down-bg {
     to {
-        opacity: 0%;
+        background-position: top;
+    }
+}
+
+@keyframes pull-up-bg {
+    to {
+        background-position: bottom;
+    }
+}
+
+@keyframes remove-bg { 
+    to {
         visibility: hidden;
     }
 }
 
-.bgChange1 {
-    position: relative;
-    top: 0%;
-    left: 0%;
-    height: 100%;
-    width: 100%;
-
-    background-image: linear-gradient(to bottom, var(--night-bg-color) 50%, var(--day-bg-color) 50%);
-    background-size: 100% 200%;
-    transition: background-position 0.4s ease-in 0.4s;
-    z-index: 3;
-}
-
-@media (prefers-color-scheme: dark) {
-    .bgChange1 {
-        background-image: linear-gradient(to bottom, var(--night-bg-color) 50%, var(--dark-scheme-color) 50%);
-    }
-}
-
-.bgChange2 {
-    position: relative;
-    top: -100%;
-    left: 0%;
-    height: 100%;
-    width: 100%;
-
-    background-image: linear-gradient(to top, var(--night-bg-color) 50%, var(--day-bg-color) 50%);
-    background-size: 100% 200%;
-    transition: background-position 0.15s ease-in 1.1s;
-}
-
-@media (prefers-color-scheme: dark) {
-    .bgChange2 {
-        background-image: linear-gradient(to top, var(--night-bg-color) 50%, var(--dark-scheme-color) 50%);
-    }
-}
-
-.bg2Visible {
-    animation: bg2-z-index 0.1s linear 1s forwards;
-}
-
-@keyframes bg2-z-index {
-    to {
-        z-index: 4;
-    }
-}
-
-@media (prefers-reduced-motion) {
-    .bgChange2 {
-        opacity: 0;
-    }
-}
-
-.bgChange3 {
-    position: relative;
-    top: -200%;
-    left: 0%;
-    height: 100%;
-    width: 100%;
-
-    background-image: linear-gradient(to bottom, var(--night-bg-color) 50%, var(--day-bg-color) 50%);
-    background-size: 100% 200%;
-    transition: background-position 0.15s ease-in 1.4s;
-}
-
-@media (prefers-color-scheme: dark) {
-    .bgChange3 {
-        background-image: linear-gradient(to bottom, var(--night-bg-color) 50%, var(--dark-scheme-color) 50%);
-    }
-}
-
-
-.bg3Visible {
-    animation: bg3-z-index 0.1s linear 1.3s forwards;
-}
-
-@keyframes bg3-z-index {
-    to {
-        z-index: 5;
-    }
-}
-
-@media (prefers-reduced-motion) {
-    .bgChange3 {
-        opacity: 0;
-    }
-}
-
-
-/* Transition Line
-––––––––––––––––––––––––––––––––––––––––––––––––––*/
-.verticalContainer {
-    margin-left: 5%;
-    overflow: hidden;
-}
-
-@media only screen and (min-width: 1000px) {
-    .verticalContainer {
-        margin-left: var(--trans-line-pos);
-    }
-}
-
-.transitionLine {
+.transLine {
     height: 100vh;
     width: auto;
+    margin-left: 5%;
     stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
 }
 
+@media only screen and (min-width: 1000px) {
+    .transLine {
+        margin-left: var(--trans-line-pos);
+    }
+}
+
 @media (prefers-color-scheme: dark) {
-    .transitionLine> path {
+    .transLine > path {
         stroke: var(--day-bg-color);
     }
 }
 
 .animateLine {
-    animation: draw 0.7s ease-in forwards;
+    animation: draw 0.6s ease-in forwards;
 }
 
 @keyframes draw {
@@ -163,38 +90,44 @@
 }
 
 
-/* Hook
+/* Header
 ––––––––––––––––––––––––––––––––––––––––––––––––––*/
 .hookContainer {
-    margin: 20% 0 30% 0;
+    padding-top: 10%;
+    background-color: var(--day-bg-color);
+    transition: background-color 0.1s ease 0.5s;
 }
 
 @media only screen and (min-width: 1000px) {
     .hookContainer {
-        margin: 10% 0 12% 0;
+        padding-top: 4%;
     }
 }
 
-.showContainer {
-    background-color: var(--night-bg-color);
-}
-
-.hideContainer {
-    background-color: var(--day-bg-color);
-}
-
 @media (prefers-color-scheme: dark) {
-    .hideContainer {
+    .hookContainer {
         background-color: var(--dark-scheme-color);
     }
 }
 
+.showHookContainer {
+    background-color: var(--night-bg-color);
+}
+
 .hook {
+    height: 100vh;
+    opacity: 0;
     margin-left: 10%;
 
     line-height: 1.5em;
     word-spacing: 3px;
-    transition: opacity 0.4s ease-in 1.6s;
+    transition: opacity 0.25s ease-in 1.5s;
+}
+
+@media (prefers-reduced-motion) {
+    .hook{
+        transition: opacity 0.25s ease-in 0.95s;
+    }
 }
 
 @media only screen and (min-width: 500px) {
@@ -203,11 +136,11 @@
     }
 }
 
-.hookHidden {
-    opacity: 0;
+.showHook {
+    opacity: 1;
 }
 
-.hookKey {
+.hookHighlight {
     color: var(--night-special-color);
     font-style: normal;
     font-weight: 800;
@@ -217,7 +150,7 @@
 }
 
 @media only screen and (min-width: 1000px) {
-    .hookKey {
+    .hookHighlight {
         text-decoration: var(--night-special-color) 8px underline;
         text-underline-offset: 6px;
         margin-left: 10px;
